me export k delete

--- a/admin/madmin1.html
+++ b/admin/madmin1.html
@@ -38,6 +38,12 @@
         <a href="//localhost/WEB_APPS/user/logout.php" class="btn btn-info btn-lg">
           <span class="glyphicon glyphicon-log-out"></span> Log out
         </a>
+        <a href="//localhost/WEB_APPS/user/deleteAdmin.php" class="btn btn-info btn-lg">
+          <span class="glyphicon glyphicon-log-out"></span> Delete Data
+        </a>
+        <a href="//localhost/WEB_APPS/user/ExportAdmin.php" class="btn btn-info btn-lg">
+          <span class="glyphicon glyphicon-log-out"></span> Export Data
+        </a>
     </div>
     <div class="nav_bar">
       <ul>
